refactor(GameService): 하나의 기능만 수행하도록 carRacing,play,getWinnerCar의 메소드 분리